--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav mr-auto">
-                <li><a href="/">About</a></li>
+                <li><a href="/">ヘルプ</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
