--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
-                <li class="navbar-text">ログイン中: {{ current_user.name }}</li>
+                <li class="navbar-text">ログイン中: {{ current_user.username }}</li>
                 <li><a href="/logout">ログアウト</a></li>
                 {% else %}
                 <li class="navbar-text">ログイン未:</li>
