--- a/templates/login.html
+++ b/templates/login.html
@@ -41,10 +41,10 @@
     <form action="" method="post">
         <h2 class="text-center">ログイン</h2>
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="username" required="required" name="username">
+            <input type="text" class="form-control" placeholder="username" required="required" name="username" value="{{ username }}">
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="password" required="required" name="password">
+            <input type="password" class="form-control" placeholder="password" required="required" name="password" value="{{ password }}">
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">
