--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}File Operater{% endblock %}
+{% block title %}File Box{% endblock %}
 
 {% block page_content %}
 <div class="container">
