--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,9 @@
     <form action="" method="post">
         <h2 class="text-center">ログイン</h2>
         <div class="form-group">
+            <input type="text" class="form-control" placeholder="companyid" required="required" name="companyid" value="{{ companyid }}">
+        </div>
+        <div class="form-group">
             <input type="text" class="form-control" placeholder="username" required="required" name="username" value="{{ username }}">
         </div>
         <div class="form-group">
